--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</footer>
 
 			</div>
-
+   <!-- BG -->
+			<div id="bg"></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
