--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+		</noscript>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
